# cubot

./: CMakeLists.txt  package.xml
scripts/: cubot_transport.py
src/: CMakeLists.txt  cubot_cv_node.cpp  cubot_cv_test.cpp  stepmotor_controller.ino
src/stepmotor_controller/: stepmotor_controller.ino
